--- a/src/main/resources/static/webApp/disabledInfo.html
+++ b/src/main/resources/static/webApp/disabledInfo.html
@@ -554,6 +554,18 @@
                 {field: 'disabilityDegree', title: '残疾等级', align: 'center', width: 120, unresize: true},
                 {field: 'address', title: '家庭住址', align: 'center', unresize: true},
 				{field: 'contactNumber', title: '联系电话', align: 'center', unresize: true},
+                {field: 'nursingModeId', title: '托养方式', align: 'center', unresize: true},
+                {field: 'nursingMonth', title: '托养月数', align: 'center', unresize: true},
+                {field: 'subsidies', title: '补贴金额', align: 'center', unresize: true},
+                {field: 'createTime', title: '提交时间', align: 'center', unresize: true},
+                {field: 'lastModifyTime', title: '更新时间', align: 'center', unresize: true},
+                {field: 'adminName', title: '提交人', align: 'center', unresize: true}
+
+
+
+
+
+
 //                {fixed: 'right', title: '操作', align: 'center', toolbar: '#barDemo', width: 250}
             ]]
             , page: true
