--- a/src/main/resources/static/webApp/manager/serviceAnalyze.html
+++ b/src/main/resources/static/webApp/manager/serviceAnalyze.html
@@ -267,11 +267,13 @@
 					}
 				},
 				data:[
-					{value:335, name:'直接访问'},
-					{value:310, name:'邮件营销'},
-					{value:234, name:'联盟广告'},
-					{value:135, name:'视频广告'},
-					{value:1548, name:'搜索引擎'}
+					{value:335, name:'辅助性就业'},
+					{value:310, name:'康复服务'},
+					{value:234, name:'日间照料'},
+					{value:135, name:'文体活动'},
+					{value:1548, name:'学习培训'},
+					{value:135, name:'志愿者服务'},
+					{value:135, name:'其他'}
 				]
 			}
 		]
